@@ -29,6 +29,7 @@ requires:
   Error::Pure: 0.15
   Exporter: 0
   Readonly: 0
+  Scalar::Util: 0
   perl: 5.6.2
 resources:
   bugtracker: https://github.com/michal-josef-spacek/Mo-utils/issues
