@@ -21,6 +21,7 @@ recursive_author_tests('xt');
 requires 'Error::Pure' => 0.15;
 requires 'Exporter' => 0;
 requires 'Readonly' => 0;
+requires 'Scalar::Util' => 0;
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Mo-utils/issues',
 resources 'homepage' => 'https://github.com/michal-josef-spacek/Mo-utils';
 resources 'repository' => 'git://github.com/michal-josef-spacek/Mo-utils';
