@@ -4,7 +4,7 @@ use warnings;
 use English;
 use Error::Pure::Utils qw(clean err_msg);
 use Test::MockObject;
-use Test::More 'tests' => 5;
+use Test::More 'tests' => 7;
 use Test::NoWarnings;
 use Mo::utils qw(check_isa);
 
@@ -20,11 +20,48 @@ is_deeply(
 	\@errors,
 	[
 		"Parameter 'key' must be a 'Foo' object.",
-# XXX
-#		'Value',
-#		'foo',
+		'Value',
+		'foo',
 	],
 	"Parameter 'key' must be a 'Foo' object (is string)."
+);
+clean();
+
+# Test.
+$self = {
+	'key' => {'foo' => 'bar'},
+};
+eval {
+	check_isa($self, 'key', 'Foo');
+};
+@errors = err_msg();
+is_deeply(
+	\@errors,
+	[
+		"Parameter 'key' must be a 'Foo' object.",
+		'Reference',
+		'HASH',
+	],
+	"Parameter 'key' must be a 'Foo' object (is reference to hash)."
+);
+clean();
+
+# Test.
+$self = {
+	'key' => ['foo', 'bar'],
+};
+eval {
+	check_isa($self, 'key', 'Foo');
+};
+@errors = err_msg();
+is_deeply(
+	\@errors,
+	[
+		"Parameter 'key' must be a 'Foo' object.",
+		'Reference',
+		'ARRAY',
+	],
+	"Parameter 'key' must be a 'Foo' object (is reference to array)."
 );
 clean();
 
