@@ -2,6 +2,7 @@
  - Add support for test of errors structure.
  - Fix error value in case of instance of object.
  - Fix bless in mock objects in tests.
+ - Improve error in check_isa() like check blessed().
  - Improve error in check_isa() to not present 'Reference' if ref $value eq
    ''.
 
